log
Sun 15 Oct 2023 04:48:30 PM UTC: 
 tests:  0|4
total_score: 0/70
28fc4d4
Sun 15 Oct 2023 04:56:48 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|4
total_score: 0/70
4f79096
Sun 15 Oct 2023 04:57:03 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:53: error: expected ‘)’ before ‘heap’
   39 |   heap->heapArray=(heapElem*)malloc(sizeof(heapElem)heap->capac);
      |                                    ~                ^~~~
      |                                                     )
Compilation failed
ecf9b17
Sun 15 Oct 2023 04:57:13 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘ize’; did you mean ‘size’?
   38 |   heap->ize=0;
      |         ^~~
      |         size
Compilation failed
d302d3b
Sun 15 Oct 2023 04:57:17 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
41e0bd7
Sun 15 Oct 2023 04:59:25 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:11: error: unused variable ‘aTop’ [-Werror=unused-variable]
   22 |     void *aTop = pq->heapArray[0].data;
      |           ^~~~
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
test.c:293: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7a116b4
Sun 15 Oct 2023 04:59:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:23:11: error: expected ‘;’ before ‘return’
   23 |     aTop++
      |           ^
      |           ;
   24 |     return NULL;
      |     ~~~~~~ 
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
test.c:293: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b0e58a8
Sun 15 Oct 2023 04:59:44 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘heap_top’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
test.c:293: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9bc517c
